--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ch559-web-updater",
+  "name": "promicro-web-updater",
   "version": "1.0.0",
   "main": "index.js",
   "author": "sekigon-gonnoc <43873124+sekigon-gonnoc@users.noreply.github.com>",
